[package]
name = "snp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "snp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "4.1.1"
mpl-bubblegum = "1.2.0"
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
# mpl-bubblegum = { version = "1.2.0", features = [ "cpi"] }
